homeassistant/endpoint-slice-ha-external-manual.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ha-external-manual
  namespace: homeassistant
  labels:
    kubernetes.io/service-name: ha-external
    endpointslice.kubernetes.io/managed-by: homeassistant-manual
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - 192.168.1.247
