homeassistant/service-ha-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-external
  namespace: homeassistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      targetPort: 8123
