homeassistant/ingress-ha-andreybondarenko.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homeassistant
  name: ha-andreybondarenko
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-geoip-country@kubernetescrd,homeassistant-hsts@kubernetescrd,traefik-robots-disallow-all@kubernetescrd
  labels:
    app: homeassistant
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/instance: homeassistant
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ha.andreybondarenko.com
      secretName: homeassistant-tls
  rules:
    - host: ha.andreybondarenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-external
                port:
                  number: 8123
